src/objects/ADCVD_Order__c.object
<CustomObject>
    <fields>
        <fullName>ADCVD_Order_Name__c</fullName>
        <formula>Petition_Case_Number__c +&apos;--&apos;+ Name</formula>
        <label>ADCVD Order Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Amended_Final_Signature__c</fullName>
        <label>Actual Amended Final Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Amended_Prelim_Determination_Sig__c</fullName>
        <label>Actual Amended Prelim Determination Sig</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Final_Signature__c</fullName>
        <label>Actual Final Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Initiation_Signature__c</fullName>
        <label>Actual Initiation Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Preliminary_Signature__c</fullName>
        <label>Actual Preliminary Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alignment_Postponement_of_Final_FR_Pub__c</fullName>
        <label>Alignment Postponement of Final FR Pub</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anniversary_Month__c</fullName>
        <label>Anniversary Month</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Months</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculated_Amended_Final_Signature__c</fullName>
        <label>Calculated Amended Final Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Amended_Prelim_Det_Signature__c</fullName>
        <label>Calculated Amended Prelim Det Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Final_Signature__c</fullName>
        <label>Calculated Final Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_ITC_Final_FR_Published__c</fullName>
        <label>Calculated ITC Final FR Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_ITC_Prelim_Determination__c</fullName>
        <label>Calculated ITC Prelim Determination</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Initiation_Signature__c</fullName>
        <label>Calculated Initiation Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Order_FR_Signature__c</fullName>
        <label>Calculated Order FR Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Postponement_of_Prelim_Det_FR__c</fullName>
        <label>Calculated Postponement of Prelim Det FR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Prelim_Extension_Req_Filed__c</fullName>
        <label>Calculated Prelim Extension Req. Filed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Calculated_Preliminary_Signature__c</fullName>
        <label>Calculated Preliminary Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Choose_Following_Respondent_Selection__c</fullName>
        <label>Choose Following Respondent Selection:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CBP Data</fullName>
                </value>
                <value>
                    <fullName>Quantity and Value Questionnaires</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concurrence_to_DAS__c</fullName>
        <label>Concurrence to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_you_have_Ministerial_Error_for_Final__c</fullName>
        <label>Do you have Ministerial Error for Final?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_Ministerial_Error_for_Prelim__c</fullName>
        <label>Do you have Ministerial Error for Prelim</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date_for_Most_Recent_SunsetFR__c</fullName>
        <label>Effective Date for Most Recent SunsetFR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Est_ITC_Notification_to_DOC__c</fullName>
        <description>Estimate ITC Notification to DOC for Final Determination</description>
        <label>Est. ITC Notification to DOC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Order_FR_Published__c</fullName>
        <label>Estimated Order FR Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Final_Extension_of_days__c</fullName>
        <label>Final Extension (# of days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Team_Meeting_Deadline__c</fullName>
        <label>Final Team Meeting Deadline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HTS_Number__c</fullName>
        <label>HTS Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITC_Finding__c</fullName>
        <label>ITC Finding</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Materially Injured</fullName>
                </value>
                <value>
                    <fullName>Threatened with Injury</fullName>
                </value>
                <value>
                    <fullName>Materially Retarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITC_Notification_to_DOC_of_Final_Determ__c</fullName>
        <label>ITC Notification to DOC of Final Determ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_Aligned_Input_AD_Final_Det_Signature__c</fullName>
        <label>If Aligned, Input AD Final Det Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiation_Extension_of_days__c</fullName>
        <label>Initiation Extension (# of days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Input_Date_of_Post_Prelim_Det_Signature__c</fullName>
        <label>Input Date of Post Prelim Det Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investigation_Outcome__c</fullName>
        <formula>TEXT( Investigation__r.Investigation_Outcome__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Investigation Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipName>Court_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_This_Investigation_Aligned_With_AD_In__c</fullName>
        <description>Is this Investigation Aligned with the AD Investigation?</description>
        <label>Is This Investigation Aligned With AD In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issues_to_DAS__c</fullName>
        <label>Issues to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>HYPERLINK( LEFT($Api.Enterprise_Server_URL_390 , FIND(&apos;/services&apos;, $Api.Enterprise_Server_URL_390)) &amp; Id,  ADCVD_Order_Name__c , &apos;_self&apos;)</formula>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lotus_Notes_History_Data__c</fullName>
        <label>Lotus Notes History Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Due_to_DAS_Deadline_and_Timeline__c</fullName>
        <label>Next Due to DAS Deadline and Timeline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Major_AS_DAS_Deadline_and_Timeline__c</fullName>
        <label>Next Major AS/DAS Deadline and Timeline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Office_PM_Deadline_and_Timeline__c</fullName>
        <label>Next Office/PM Deadline and Timeline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Sunset_Initiation_Date__c</fullName>
        <label>Next Sunset Initiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Additional_Companies_Inv_Rev__c</fullName>
        <label>Number of Additional Companies Inv/Rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Companies_Requested__c</fullName>
        <label>Number of Companies Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Mandatory_Companies__c</fullName>
        <label>Number of Mandatory Companies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_Covered_End_Date__c</fullName>
        <label>Period Covered - End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Covered_Start_Date__c</fullName>
        <label>Period Covered - Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Petition_Case_Number__c</fullName>
        <formula>Investigation__r.Petition_Case_Number__c</formula>
        <label>Petition Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Petition_Case_Type__c</fullName>
        <formula>TEXT(Investigation__r.Petition__r.Case_Type__c)</formula>
        <label>Petition Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Petition_Commodity__c</fullName>
        <formula>TEXT(  Investigation__r.Petition__r.Commodity__c  )</formula>
        <label>Petition Commodity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Petition_Country__c</fullName>
        <formula>TEXT(  Investigation__r.Petition__r.Country__c )</formula>
        <label>Petition Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Petition_Filed__c</fullName>
        <formula>Investigation__r.Petition__r.Petition_Filed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Petition Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Petition_Product__c</fullName>
        <formula>Investigation__r.Petition__r.Product__c</formula>
        <label>Petition Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prelim_Extension_of_days__c</fullName>
        <label>Prelim Extension (# of days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prelim_Team_Meeting_Deadline__c</fullName>
        <label>Prelim Team Meeting Deadline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Receive_Injunction_or_In_Litigation__c</fullName>
        <label>Receive Injunction or In Litigation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revocation_Reason__c</fullName>
        <label>Revocation Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunset - No Interest</fullName>
                </value>
                <value>
                    <fullName>Sunset - No Likelihood</fullName>
                </value>
                <value>
                    <fullName>Sunset - Injury</fullName>
                </value>
                <value>
                    <fullName>CCR - No Interest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope_Description__c</fullName>
        <description>Scope Description</description>
        <inlineHelpText>Scope Description</inlineHelpText>
        <label>Scope Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Segment_Status__c</fullName>
        <label>Segment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Litigation Hold</fullName>
                </value>
                <value>
                    <fullName>Litigation</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_of_Suspension_Gap_Period_Beg__c</fullName>
        <label>Termination of Suspension Gap Period Beg</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Third_Country_Case_Number_s__c</fullName>
        <label>Third Country Case Number(s)</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upstream_Subsidy_Allegation__c</fullName>
        <label>Upstream Subsidy Allegation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_You_Amend_the_Final__c</fullName>
        <label>Will You Amend the Final?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_You_Amend_the_Prelim_Determination__c</fullName>
        <label>Will You Amend the Prelim Determination?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_you_Issue_Post_Prelim_Determination__c</fullName>
        <label>Will you Issue Post Prelim Determination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <label>ADCVD Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Petition_Country__c</columns>
        <columns>Petition_Product__c</columns>
        <columns>Petition_Case_Type__c</columns>
        <columns>Petition_Case_Number__c</columns>
        <columns>Petition_Commodity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AO-{0000000}</displayFormat>
        <label>ADCVD Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ADCVD Orders</pluralLabel>
    <recordTypes>
        <fullName>Anti_Circumvention_Review</fullName>
        <active>true</active>
        <label>Anti-Circumvention Review</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>